<resources>
    <string name="app_name">COPDApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="seeker">Seeker</string>
    <string name="caregiver">Caregiver</string>
    <string name="patient">Patient</string>
    <string name="dashboard">Dashboard</string>
    <string name="copd_awareness">COPD Awareness</string>
    <string name="copd_questionnaire">COPD Questionnaire</string>
    <string name="walk_test_game">Walk Test Game</string>
    <string name="community_chat">Community Chat</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="copd_app">COPD App</string>
    <string name="welcome">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_the_home_screen">Welcome to the Home Screen</string>
    <string name="medical_adherence">Medical Adherence</string>
    <string name="todo1">TODO</string>
    <string name="copd_awareness_info">This is for testing purposes. We will add more data according to whatever is required to be added here.</string>
    <string name="often">Often</string>
    <string name="sometimes">Sometimes</string>
    <string name="submit">Submit</string>
    <string name="rarely">Rarely</string>
    <string name="question_2_how_often_do_you_use_a_rescue_inhaler">Question 2: How often do you use a rescue inhaler?</string>
    <string name="question_1_how_often_do_you_feel_short_of_breath">Question 1: How often do you feel short of breath?</string>
    <string name="medication_name">Medicine Name\n</string>
    <string name="dosage">Dosage\n</string>
    <string name="add_medication">Add to Schedule</string>
    <string name="select_time">Select Time</string>
    <string name="login">Login\n</string>
    <string name="dont_have_an_account_sign_up_here">Don\'t have an account? Sign Up here.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="welcome_message">Welcome to the COPD App!</string>
    <string name="header_subtitle">testsubtitle\n</string>
    <string name="copd_image_desc">testImage</string>
</resources>