<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_test"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_copd_awareness"
            android:icon="@drawable/ic_test"
            android:title="@string/copd_awareness" />
        <item
            android:id="@+id/nav_copd_questionnaire"
            android:icon="@drawable/ic_test"
            android:title="@string/copd_questionnaire" />
        <item
            android:id="@+id/nav_walk_test"
            android:icon="@drawable/ic_test"
            android:title="@string/walk_test_game" />
        <item
            android:id="@+id/nav_community_chat"
            android:icon="@drawable/ic_test"
            android:title="@string/community_chat" />
    </group>
</menu>
