<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:id="@+id/linearLayout">

    <Button
        android:id="@+id/btnDashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="202dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <Button
        android:id="@+id/btnMedicalAdherence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medical_adherence"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="258dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <Button
        android:id="@+id/btnCOPDAwareness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copd_awareness"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="314dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <Button
        android:id="@+id/btnCOPDQuestionnaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copd_questionnaire"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="370dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <Button
        android:id="@+id/btnWalkTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/walk_test_game"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="426dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <Button
        android:id="@+id/btnCommunityChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/community_chat"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_editor_absoluteY="482dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_conversion_absoluteWidth="379dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todo1" />

</LinearLayout>
