<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etMedicationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medication_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etDosage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dosage"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/timePickerMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_time" />

    <Button
        android:id="@+id/btnAddMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_medication" />

</LinearLayout>
