<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:text="@string/copd_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="363dp"
        android:layout_height="120dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="20sp" />
</LinearLayout>
