<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Question 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1_how_often_do_you_feel_short_of_breath" />
        <RadioGroup
            android:id="@+id/radioGroupQuestion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rarely"
                android:tag="1" />

            <RadioButton
                android:id="@+id/radioButton2Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sometimes"
                android:tag="2" />

            <RadioButton
                android:id="@+id/radioButton3Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:tag="3" />
        </RadioGroup>

        <!-- Question 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_how_often_do_you_use_a_rescue_inhaler" />
        <RadioGroup
            android:id="@+id/radioGroupQuestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton1Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rarely"
                android:tag="1" />

            <RadioButton
                android:id="@+id/radioButton2Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sometimes"
                android:tag="2" />

            <RadioButton
                android:id="@+id/radioButton3Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/often"
                android:tag="3" />
        </RadioGroup>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
